# escat

./: README.md  pyproject.toml
escat/: cli.py
esdbcat/: __init__.py  cli.py
tests/: test_behavior.py
